<resources>
    <string name="app_name">Home Services and Repairs</string>
    <string name="loginTitle">Log in</string>
    <string name="btnLogin">LOG IN</string>
    <string name="btnSignup">SIGN UP</string>
    <string name="startingTitle">Home Service Genie</string>
    <string name="passHint">Password</string>
    <string name="nameHint">Username</string>
    <string name="btnBack">BACK</string>
    <string name="signupTitle">Sign up</string>
    <string name="radioHomeowner">Homeowner</string>
    <string name="radioService">Service Provider</string>
    <string name="radioAdmin">Administrator</string>
    <string name="btnLogout">LOG OUT</string>
    <string name="btnManageServices">MANAGE SERVICES</string>
    <string name="btnAdd">ADD</string>
    <string name="btnEdit">EDIT</string>
    <string name="btnDelete">DELETE</string>
    <string name="editServiceName">Service Name</string>
    <string name="editRate">Rate</string>
    <string name="btnSave">Save</string>
</resources>
